<resources>
    <string name="app_name">Expenses Tracker</string>

    <string name="google_client_id">557190350054-5j8h306qm91fj31enjqg3lsmp82no9ea.apps.googleusercontent.com</string>

    <string name="google_oauth2_request_params">{
		\"client_id\": \"557190350054-5j8h306qm91fj31enjqg3lsmp82no9ea.apps.googleusercontent.com\",
		\"client_secret\": \"************\",
		\"auth_uri\": \"https://accounts.google.com/o/oauth2/auth\",
		\"token_uri\": \"https://www.googleapis.com/oauth2/v3/token\",
		\"people_uri\": \"https://www.googleapis.com/plus/v1/people/me\",
		\"auth_provider_x509_cert_url\": \"https://www.googleapis.com/oauth2/v1/certs\",
		\"redirect_uris\": [\"urn:ietf:wg:oauth:2.0:oob\",
		\"http://localhost\"]
	}</string>


	<string name="authorization_error_empty_code">Authorization error - code was not received for unknown reason</string>
	<string name="authorization_error_unknown">Authorization failed (no error description provided by server)</string>
	<string name="authorization_access_denied">You must grant the application access to your Google Drive account</string>
	<string name="authorization_access_described">Authorization failed (error description: \"%s\")</string>

	<string name="processing_screen_title">Completing authorization</string>
	<string name="processing_screen_getting_tokens">Getting access keys...</string>
	<string name="processing_screen_getting_user">Getting user account information...</string>

	<string name="error_screen_title">An error account during authorization with account</string>
	<string name="error_screen_code">Code:</string>
	<string name="error_screen_description">Description:</string>
	<string name="error_screen_request">&lt;b&gt;HTML request:&lt;/b&gt; &lt;font color=&quot;#7046F0&quot;&gt;%1$s&lt;/font&gt;</string>
	<string name="error_screen_btn_again">Try again</string>
	<string name="error_screen_btn_exit">Exit</string>

	<string name="ok_screen_title">You have successfully authorized with google account</string>
	<string name="ok_screen_btn_accept">Accept and continue</string>
	<string name="ok_screen_btn_another">Try another</string>
	<string name="ok_screen_revoke_dlg_title">Revokation</string>
	<string name="ok_screen_revoke_dlg_message">Authorization for the &lt;font color=&quot;#68B4F7&quot;&gt;&lt;b&gt;%1$s&lt;/b&gt;&lt;/font&gt; will be reverted, all access keys will be revoken.\nAre you sure?</string>

</resources>
