<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/general_red"
        android:textSize="14sp"
        android:text="@string/error_screen_title"/>

    <TextView android:id="@+id/txt_error_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:singleLine="true"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#909090"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp" >
        <Button android:id="@+id/btn_error_try_again"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/error_screen_btn_again"/>

        <View
            android:layout_width="@dimen/general_screen_side_padding"
            android:layout_height="1dp"
            android:layout_weight="0"/>

        <Button android:id="@+id/btn_error_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/error_screen_btn_exit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/general_screen_side_padding"
            android:textColor="@color/general_red_bright"
            android:text="@string/error_screen_code"/>

        <TextView android:id="@+id/txt_error_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:textColor="@color/general_red_bright"
        android:text="@string/error_screen_description"/>

    <TextView android:id="@+id/txt_error_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="6dp"
        android:background="@drawable/bg_error_description"/>

    <TextView android:id="@+id/txt_error_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:padding="6dp"
        android:background="@drawable/bg_error_description" />

</merge>