<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:textColor="@color/general_blue"
        android:textSize="14sp"
        android:text="@string/ok_screen_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25" />

    <ImageView
        android:layout_width="@dimen/login_account_image"
        android:layout_height="@dimen/login_account_image"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/txt_result_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:singleLine="true"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/general_blue_dark"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" />

    <Button android:id="@+id/btn_result_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/custom_buttons_text_color_selector"
        android:background="@drawable/bg_btn_ok"
        android:text="@string/ok_screen_btn_accept"/>

    <Button android:id="@+id/btn_result_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="@dimen/general_screen_vert_padding"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/custom_buttons_text_color_selector"
        android:background="@drawable/bg_btn_error"
        android:text="@string/ok_screen_btn_another"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45" />

</merge>